fix default image in carousel not showing

--- a/frontend/src/app/components/journey/journey.component.scss
+++ b/frontend/src/app/components/journey/journey.component.scss
@@ -7,7 +7,7 @@
 
 .journey {
   margin-top: 15px;
-  max-width: 400px;
+  width: 380px;
 }
 .description-wrapper {
   margin-top: 10px;
